kubernetes/apps/homer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homelab
