kubernetes/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: homer
